2008-02-02  Thomas Hinkle  <tmhinkle@gmail.com>

	* src/lib/defaults.py.in (PUZZLE_DIR): Add PUZZLE_DIR parameter to
	point to where default starter puzzles are stored.
	* src/lib/sudoku_maker.py (SudokuMaker.load): Use PUZZLE_DIR from
	defaults to load puzzles (fixes in-place running of gnome-sudoku).
	(SudokuMaker.get_puzzles): Add parameter 'exclude' which is a list
	of puzzles not to include in results. This allows caller to exclude
	saved games (which SudokuMaker doesn't know about)
	* src/lib/game_selector.py (NewOrSavedGameSelector.make_new_game_model):
	Exclude saved games from list of new games.

2008-01-16  Thomas Mills Hinkle  <tmhinkle@gmail.com>

	* src/lib/main.py Apply patch from Didier Vidal fixing bug #502675.

2008-01-15  Thomas Mills Hinkle  <tmhinkle@gmail.com>

	* src/lib/gsudoku.py (NumberBox.show_number_picker): Use
	type=gtk.WINDOW_POPUP instead of crazy abuse of hints &c.
	This fixes bug #479938

2008-01-12  Thomas H.P. Andersen  <phomes@gmail.com>

	* src/gnome-sudoku.in.in: Reorder to load from prefix before system 
	wide. Fixes bug #406672.

2008-01-10  Andreas Røsdal  <andreasr@gnome.org>

	* src/gnome-sudoku.in:
	* src/gnome-sudoku.in.in:
	* src/lib/defaults.py.in: Allow Sudoku to be run from source
	distribution, without requiring a full install. To run Sudoku
	from the source distribution, simply execute:
	$ python gnome-sudoku/src/gnome-sudoku

2008-01-08  Thomas Mills HInkle  <tmhinkle@gmail.com>

	* gnome-sudoku/src/lib/gnome_sudoku.py Use add_value_to_ui for all
	callbacks where we restore user values to the grid (whether
	through loading saved game or undo). (Bug #430893)
	* gnome-sudoku/src/lib/gsudoku.py Use add_value_to_ui for all
	callbacks where we restore user values to the grid (whether
	through loading saved game or undo). (Bug #430893)

2007-12-06  Thomas H.P. Andersen  <phomes@gmail.com>

	* gnome-sudoku/src/lib/gnome_sudoku.py:
	* gnome-sudoku/src/lib/game_selector.py: